--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-Mon premier essai
+<!doctype html>
+<html lang="fr">
+	<head>
+	  <meta charset="utf-8">
+	  <link rel="stylesheet" type="text/css" href="example.css">
+	  <title>Mon permier essai en PHP</title>
+	  
+	</head>
+	<body>
+		<h1 id="titre">Ceci est un premier exemple</h1>
+
+			<h2> voici des paragraphes</h2>
+				<p> Ceci est le premier paragraphe. Il est court.
+				</p>
+				<p> Ceci est le second paragraphe. Il est un peu plus long. <br>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+
+			<h2> voici des listes</h2>
+
+				<h3>Ordonnée</h3>
+					<ol>
+						<li>Elément 1</li>
+						<li>Elément 2</li>
+						<li>Elément 3</li>
+					</ol>
+
+				<h3>Non Ordonnée</h3>	
+					<ul>
+						<li>Elément 1</li>
+						<li>Elément 2</li>
+						<li>Elément 3</li>
+					</ul>
+
+			<h2 id="listes"> voici des liens</h2>
+				<a href="https://www.google.fr/"> Aller sur Google </a> <br>
+				<a href="#listes"> Rester ici </a> <br>
+				<a href="#titre"> Remontre au premier paragraphe </a> <br>
+
+			<h2> voici des images</h2>
+				<img src="Ice_cream.jpg">
+
+			<h2> voici des tables</h2>
+
+				<h3> Table simple</h3>	
+					<table>
+						<thead>
+							<tr>
+								<th>Col1</th>
+								<th>Col2</th>
+								<th>Col3</th>							
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Col1</td>
+								<td>Col2</td>
+								<td>Col3</td>
+							</tr>
+						</tbody>
+					</table>
+
+				<h3> Table avec des cellules fusionnées</h3>	
+					<table>
+						<thead>
+							<tr>
+								<th colspan="2">Header</th>							
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>1</td>
+								<td rowspan="2">Fusion</td>							
+							</tr>
+							<tr>
+								<td>2</td>							
+							</tr>
+							<tr >
+								<td colspan="2">Fusion</td>												
+							</tr>						
+						</tbody>	
+					</table>
+	</body>
+</html>
