Erreur de titre index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	  <meta charset="utf-8">
 	  <link rel="stylesheet" type="text/css" href="example.css">
-	  <title>Mon permier essai en PHP</title>
+	  <title>Mon permier HTML</title>
 	  
 	</head>
 	<body>
