--- a/carousel.html
+++ b/carousel.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 	<head>
 	  <meta charset="utf-8">
-	  <link rel="stylesheet" type="text/css" href="caroussel.css">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <link rel="stylesheet" type="text/css" href="carousel.css">
 	  <title>Carousel</title>
 	  
 	</head>
